Changed the title from Todo list to Notes App in index.html

--- a/index.html
+++ b/index.html
@@ -3,19 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>To-Do List App</title>
+    <title>Notes App</title>
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
     <div class="container todo-head">
-      <h1>To-Do List</h1>
+      <h1>Notes App</h1>
 
       <form id="todo-form">
         <!-- <label for="task-input">New Item</label> -->
         <input
           type="text"
           id="task-input"
-          placeholder="Add a new task"
+          placeholder="Write something..."
           required
         />
         <button type="submit">Add Task</button>
